@@ -55,7 +55,6 @@ import hudson.security.Permission;
 import hudson.security.ProjectMatrixAuthorizationStrategy;
 import hudson.util.FormValidation;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -152,10 +151,10 @@ public class BuildTriggerTest {
         j.jenkins.setAuthorizationStrategy(auth);
         final FreeStyleProject upstream = j. createFreeStyleProject("upstream");
         org.acegisecurity.Authentication alice = User.getOrCreateByIdOrFullName("alice").impersonate();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Collections.singletonMap("upstream", alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Map.of("upstream", alice)));
         Map<Permission, Set<String>> perms = new HashMap<>();
-        perms.put(Item.READ, Collections.singleton("alice"));
-        perms.put(Item.CONFIGURE, Collections.singleton("alice"));
+        perms.put(Item.READ, Set.of("alice"));
+        perms.put(Item.CONFIGURE, Set.of("alice"));
         upstream.addProperty(new AuthorizationMatrixProperty(perms));
         String downstreamName = "d0wnstr3am"; // do not clash with English messages!
         FreeStyleProject downstream = j.createFreeStyleProject(downstreamName);
@@ -172,7 +171,7 @@ public class BuildTriggerTest {
         childProjects.setValueAttribute(downstreamName);
         submit(config);
         */
-        assertEquals(Collections.singletonList(downstream), upstream.getDownstreamProjects());
+        assertEquals(List.of(downstream), upstream.getDownstreamProjects());
         // Downstream projects whose existence we are not aware of will silently not be triggered:
         assertDoCheck(alice, Messages.BuildTrigger_NoSuchProject(downstreamName, "upstream"), upstream, downstreamName);
         assertDoCheck(alice, null, null, downstreamName);
@@ -182,7 +181,7 @@ public class BuildTriggerTest {
         assertNull(downstream.getLastBuild());
         // If we can see them, but not build them, that is a warning (but this is in cleanUp so the build is still considered a success):
         Map<Permission, Set<String>> grantedPermissions = new HashMap<>();
-        grantedPermissions.put(Item.READ, Collections.singleton("alice"));
+        grantedPermissions.put(Item.READ, Set.of("alice"));
         AuthorizationMatrixProperty amp = new AuthorizationMatrixProperty(grantedPermissions);
         downstream.addProperty(amp);
         assertDoCheck(alice, Messages.BuildTrigger_you_have_no_permission_to_build_(downstreamName), upstream, downstreamName);
@@ -192,7 +191,7 @@ public class BuildTriggerTest {
         j.waitUntilNoActivity();
         assertNull(downstream.getLastBuild());
         // If we can build them, then great:
-        grantedPermissions.put(Item.BUILD, Collections.singleton("alice"));
+        grantedPermissions.put(Item.BUILD, Set.of("alice"));
         downstream.removeProperty(amp);
         amp = new AuthorizationMatrixProperty(grantedPermissions);
         downstream.addProperty(amp);
@@ -207,7 +206,7 @@ public class BuildTriggerTest {
         assertNotNull(cause);
         assertEquals(b, cause.getUpstreamRun());
         // Now if we have configured some QIA’s but they are not active on this job, we should normally fall back to running as anonymous. Which would normally have no permissions:
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(Collections.singletonMap("upstream", Jenkins.ANONYMOUS)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(Map.of("upstream", Jenkins.ANONYMOUS)));
         assertDoCheck(alice, Messages.BuildTrigger_you_have_no_permission_to_build_(downstreamName), upstream, downstreamName);
         assertDoCheck(alice, null, null, downstreamName);
         b = j.buildAndAssertSuccess(upstream);
@@ -215,8 +214,8 @@ public class BuildTriggerTest {
         j.waitUntilNoActivity();
         assertEquals(1, downstream.getLastBuild().number);
         // Unless we explicitly granted them:
-        grantedPermissions.put(Item.READ, Collections.singleton("anonymous"));
-        grantedPermissions.put(Item.BUILD, Collections.singleton("anonymous"));
+        grantedPermissions.put(Item.READ, Set.of("anonymous"));
+        grantedPermissions.put(Item.BUILD, Set.of("anonymous"));
         downstream.removeProperty(amp);
         amp = new AuthorizationMatrixProperty(grantedPermissions);
         downstream.addProperty(amp);
